# primo

./: .clang-format  .gitignore  CMakeLists.txt  input.code  io.primo  main.primo  output  output.s
src/: ast.cpp  ast.hpp  codegen.cpp  hash_stack.hpp  ir_context.hpp  log.hpp  main.cpp  program.cpp  program.hpp  stream_parser.cpp  stream_parser.hpp  token_list.cpp  token_list.hpp  tokenize.cpp  tokenize.hpp
src/ast/: block_statement.cpp  block_statement.hpp  call_expression.cpp  call_expression.hpp  export_statement.cpp  export_statement.hpp  expression.hpp  expression_statement.cpp  expression_statement.hpp  external_decleration.cpp  external_decleration.hpp  function_declaration.cpp  function_declaration.hpp  function_decleration.cpp  function_decleration.hpp  function_definition.cpp  function_definition.hpp  identifier.cpp  identifier.hpp  import_statement.cpp  import_statement.hpp  module.cpp  module.hpp  node.cpp  node.hpp  program.cpp  program.hpp  statement.hpp  string_literal.cpp  string_literal.hpp
